complete crud for lessons