@@ -1,5 +1,6 @@
 package com.robosoft.elearning.services.impl;
 
+import com.robosoft.elearning.dto.request.ChapterRequest;
 import com.robosoft.elearning.dto.response.*;
 import com.robosoft.elearning.exception.NotFoundException;
 import com.robosoft.elearning.jwt.JwtUtils;
@@ -16,6 +17,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class ChapterServiceImpl implements ChapterService {
@@ -41,8 +43,6 @@ public class ChapterServiceImpl implements ChapterService {
     public ResponseEntity<ResponseDTO<List<ChapterResponse>>> getAllChapters() {
         List<Chapter> chapters = chapterRepository.findAll();
         List<ChapterResponse> responseList = new ArrayList<>();
-
-        // Use constructor without lessons
         chapters.forEach(chapter -> {
             ChapterResponse chapterResponse = new ChapterResponse(
                     chapter.getId(),
@@ -64,61 +64,65 @@ public class ChapterServiceImpl implements ChapterService {
         return responseUtil.successResponse(chapterResponse);
     }
 
-//    public ResponseEntity<ResponseDTO<Map<String, List<ChapterSummaryResponse>>>> getChaptersBySubjectId(Long subjectId) {
-//        Optional<Subject> subject = subjectRepository.findById(subjectId);
-//        if (subject.isEmpty()) {
-//            throw new NotFoundException("Subject not found with ID: " + subjectId);
-//        }
-//        List<ChapterSummaryResponse> chapterResponses = chapterRepository.findBySubjectId(subjectId)
-//                .stream()
-//                .map(chapter -> {
-//                    ChapterSummaryResponse response = new ChapterSummaryResponse();
-//                    response.setSubjectId(subject.get().getId());
-//                    response.setSubjectName(subject.get().getSubjectName());
-//                    response.setChapterName(chapter.getChapterName());
-//                    response.setChapterImg(chapter.getChapterImg());
-//                    return response;
-//                }).toList();
-//        Map<String, List<ChapterSummaryResponse>> responseMap = new HashMap<>();
-//        responseMap.put(subject.get().getSubjectName(), chapterResponses);
-//
-//        return responseUtil.successResponse(responseMap, "Chapters fetched successfully");
-//    }
 
-
-
-    @Override
-    public ResponseEntity<ResponseDTO<CurrentlyStudyingSubjectResponse>> getChaptersDetailsBySubjectId(Long subjectId, HttpServletRequest request) {
+    public ResponseEntity<ResponseDTO<Map<String, Object>>> getChaptersBySubjectId(Long subjectId, HttpServletRequest request) {
         User user = jwtUtils.getUserDataFromRequest(request);
-
-        // Fetch the subject
         Subject subject = subjectRepository.findById(subjectId)
                 .orElseThrow(() -> new NotFoundException("Subject not found with ID: " + subjectId));
-
-        // Fetch the user's currently studying chapter for this subject
-        UserCurrentlyStudying currentlyStudying = userCurrentlyStudyingRepository
-                .findByUserIdAndSubjectId(user.getId(), subjectId)
+        Optional<UserCurrentlyStudying> userCurrentlyStudyingOpt = userCurrentlyStudyingRepository.findByUserIdAndSubjectId(user.getId(), subjectId);
+        Long currentChapterId = userCurrentlyStudyingOpt.map(UserCurrentlyStudying::getCurrentChapter)
+                .map(Chapter::getId)
                 .orElse(null);
-
-        List<ChapterSummaryResponse> chapters = chapterRepository.findBySubjectId(subjectId)
+        List<ChapterSummaryResponse> chapterResponses = chapterRepository.findBySubjectId(subjectId)
                 .stream()
                 .map(chapter -> new ChapterSummaryResponse(
                         chapter.getId(),
                         chapter.getChapterName(),
                         chapter.getChapterImg(),
-                        currentlyStudying != null && chapter.getId().equals(currentlyStudying.getCurrentChapter().getId())
+                        chapter.getId().equals(currentChapterId),
+                        subject.getId(),
+                        subject.getSubjectName()
                 ))
-                .toList();
-
-        CurrentlyStudyingSubjectResponse response = new CurrentlyStudyingSubjectResponse(
-                subject.getId(),
-                subject.getSubjectName(),
-                currentlyStudying != null ? currentlyStudying.getCurrentChapter().getId() : null,
-                chapters
-        );
-
-        return responseUtil.successResponse(response, "Chapters fetched successfully");
+                .collect(Collectors.toList());
+        Map<String, Object> subjectData = new HashMap<>();
+        subjectData.put("chapters", chapterResponses);
+        Map<String, Object> responseMap = new HashMap<>();
+        responseMap.put("subjectName", subject.getSubjectName());
+        responseMap.put("chapters", chapterResponses);
+        return responseUtil.successResponse(responseMap, "Chapters fetched successfully");
     }
 
+
+
+
+
+    @Override
+    public ResponseEntity<ResponseDTO<ChapterResponse>> createChapter(ChapterRequest chapterRequest) {
+        Chapter chapter = new Chapter();
+        chapter.setChapterName(chapterRequest.getChapterName());
+        chapter.setChapterImg(chapterRequest.getChapterImg());
+        Chapter savedChapter = chapterRepository.save(chapter);
+        ChapterResponse chapterResponse = new ChapterResponse(savedChapter.getId(), savedChapter.getChapterName(), savedChapter.getChapterImg());
+        return responseUtil.successResponse(chapterResponse, "Chapter created successfully");
+    }
+
+    @Override
+    public ResponseEntity<ResponseDTO<ChapterResponse>> updateChapter(Long id, ChapterRequest chapterRequest) {
+        Chapter chapter = chapterRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Chapter not found with ID: " + id));
+        chapter.setChapterName(chapterRequest.getChapterName());
+        chapter.setChapterImg(chapterRequest.getChapterImg());
+        Chapter updatedChapter = chapterRepository.save(chapter);
+        ChapterResponse chapterResponse = new ChapterResponse(updatedChapter.getId(), updatedChapter.getChapterName(), updatedChapter.getChapterImg());
+        return responseUtil.successResponse(chapterResponse, "Chapter updated successfully");
+    }
+
+    @Override
+    public ResponseEntity<ResponseDTO<Void>> deleteChapter(Long id) {
+        Chapter chapter = chapterRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Chapter not found with ID: " + id));
+        chapterRepository.delete(chapter);
+        return responseUtil.successResponse(null, "Chapter deleted successfully");
+    }
 
 }
